scrollbar fix

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -8,6 +8,10 @@
     font-size: 1.2rem;
 }
 
+.Burger::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
 @media (min-width: 500px) and (min-height: 400px) {
     .Burger {
         width: 350px;
